# sync-rollups-composer

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: auditor.md  core-worker.md  general-worker.md  maintainer.md  protocol-qa.md  qa.md  spec-writer.md  test-writer.md  ui-worker.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  label-issues.yml
contracts/: Counter.sol  L2Context.sol  MockECDSAVerifier.sol  foundry.toml
contracts/test/: MockZKVerifier.sol  RevertOnReceive.sol  WithdrawalSender.sol
contracts/test-atomicity/src/: Counter.sol  DualCaller.sol  Orchestrator.sol  SimpleStorage.sol
contracts/test-depth2/: foundry.toml
contracts/test-depth2/src/: PingPongL1.sol  PingPongL2.sol  PingPongReturnL1.sol  PingPongReturnL2.sol
contracts/test-multi-call/: foundry.toml
contracts/test-multi-call/cache/: solidity-files-cache.json
contracts/test-multi-call/src/: BridgeThenCall.sol  BridgeWrapper.sol  CallTwice.sol  CallTwoDifferent.sol  ConditionalCallTwice.sol  Counter.sol  CrossChainAggregator.sol  CrossChainArb.sol  DualCaller.sol  L2Executor.sol  MockERC20.sol  Orchestrator.sol  SimpleAMM.sol  SimpleStorage.sol  WETH.sol
crates/based-rollup/: Cargo.toml  build.rs
crates/based-rollup/benches/: throughput.rs
crates/based-rollup/src/: arb_trace.rs  builder_sync.rs  builder_sync_tests.rs  config.rs  config_tests.rs  consensus.rs  consensus_tests.rs  cross_chain.rs  cross_chain_tests.rs  derivation.rs  derivation_tests.rs  driver.rs  driver_test_harness.rs  driver_tests.rs  entry_queue.rs  evm_config.rs  evm_config_tests.rs  execution_planner.rs  execution_planner_tests.rs  health.rs  health_tests.rs  l1_proxy.rs  l1_proxy_tests.rs  lib.rs  main.rs  payload_builder.rs  payload_builder_tests.rs  proposer.rs  proposer_tests.rs  proxy.rs  rpc.rs  rpc_tests.rs  table_builder.rs  table_builder_tests.rs
crates/based-rollup/src/composer_rpc/: bundle_manager.rs  common.rs  delivery.rs  direction.rs  discover.rs  entry_builder.rs  l1_to_l2.rs  l1_to_l2_tests.rs  l2_to_l1.rs  l2_to_l1_tests.rs  mod.rs  model.rs  sim_client.rs  simulate.rs  trace.rs
crates/based-rollup/src/composer_rpc/bundle_manager/: tests.rs
crates/based-rollup/src/composer_rpc/l1_to_l2/: mod.rs  process.rs  simulation.rs
crates/based-rollup/src/composer_rpc/l2_to_l1/: enrichment.rs  mod.rs  process.rs
crates/based-rollup/src/composer_rpc/trace/: mod.rs  proxy.rs  types.rs  walker.rs
crates/based-rollup/src/driver/: build.rs  flush.rs  flush_plan.rs  hold.rs  journal.rs  mod.rs  pending_queue.rs  protocol_txs.rs  rewind.rs  step_builder.rs  types.rs  verify.rs
crates/based-rollup/src/test_support/: mirror_case.rs  mod.rs  trace_fixtures.rs
crates/based-rollup/tests/: e2e_anvil.rs  evm_executor.rs
crates/based-rollup/tests/fixtures/traces/: README.md  child_continuation.json  deposit_simple_l1_to_l2.json  flash_loan_3_call_l1_to_l2.json  multi_call_call_twice.json  ping_pong_depth_2_l2_to_l1.json  ping_pong_depth_3_l2_to_l1.json  top_level_revert.json  withdrawal_simple_l2_to_l1.json
deployments/chiado-10200/: .env.example  README.md  docker-compose.explorer.yml  docker-compose.yml
deployments/chiado-10200-public/: .env.example  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.explorer.override.yml  docker-compose.explorer.yml  docker-compose.yml
deployments/ci-local/: docker-compose.dev.yml  docker-compose.yml  genesis-l1.json  genesis-l2.json
deployments/devnet-eez/: .env.example  README.md  docker-compose.dev.yml  docker-compose.explorer.yml  docker-compose.yml  genesis-l1.json  genesis-l2.json
deployments/ethereum-1/: README.md
deployments/gnosis-100/: .env.example  README.md  deploy-gnosis.sh  docker-compose.explorer.yml  docker-compose.yml
deployments/kurtosis-1337/: .env.kurtosis.example  README.md  docker-compose.yml  network_params.yaml  start.sh  verify-finality.sh
deployments/shared/: Dockerfile  Dockerfile.ci  Dockerfile.dev  docker-compose.base.yml  docker-compose.explorer.yml  genesis.json
deployments/shared/scripts/: deploy-aggregator.sh  deploy-flash-loan.sh  deploy-reverse-flash-loan.sh  deploy.sh  deploy_l2.sh  send-complex-txs.sh  send-crosschain-txs.sh  send-test-txs.sh  start-rollup.sh  verify-contracts.sh
deployments/testnet-eez/: .env.example  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.explorer.yml  docker-compose.yml
docs/: DERIVATION.md  PLAN-GENERIC-FILTERING.md  SYNC_ROLLUPS_PROTOCOL_SPEC.md  architecture.excalidraw  proposed-scope-spec-additions.md
docs/refactor/: ARCH_MAP.md  INVARIANT_MAP.md  PLAN.md
scripts/: arb_bot.py  arb_dashboard.py  ci-local.sh  deploy_arb_eez.sh  trader.py
scripts/e2e/: bridge-health-check.sh  crosschain-health-check.sh  debug-trace-iterative.sh  deploy-ping-pong-return.sh  deploy-ping-pong.sh  double-deposit-withdrawal-trace.sh  flashloan-health-check.sh  flashloan-test.sh  lib-health-check.sh  quick-test.sh  test-bridge-tokens-l2-to-l1.sh  test-conditional-cross-chain.sh  test-cross-chain-atomicity.sh  test-deep-scope.sh  test-depth2-generic.sh  test-l2-proxy-call.sh  test-l2-to-l1-flash-loan.sh  test-l2-to-l1-return-data.sh  test-multi-call-cross-chain.sh  test-multi-directional-cross-chain.sh  test-sibling-scopes.sh
scripts/e2e/arb-soak/: README.md  bot.py  monitor.py  run.sh  setup.sh  trader.py
scripts/refactor/: baseline_lib.sh  capture_baseline.sh  check-no-hardcoded-selectors.sh  replay_baseline.sh
scripts/simulations/: bridge-tokens-l2-to-l1.sh
scripts/tools/: inspect-l1-block.sh
tests/baseline/: _meta.json  bridge.json  counter.json  counterL2.json  flash-loan.json  multi-call-twice.json  multi-call-two-diff.json  nestedCounter.json  nestedCounterL2.json  revertContinue.json  revertContinueL2.json
ui/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  config.ts  rpc.ts  types.ts  vite-env.d.ts
ui/src/abi/: rollups.ts
ui/src/components/: AbiMethodSelector.module.css  AbiMethodSelector.tsx  AggregatorPanel.module.css  AggregatorPanel.tsx  BridgePanel.tsx  (+36 more)
(+80 files in other folders)
